--- a/package.json
+++ b/package.json
@@ -12,18 +12,29 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.6",
+    "@tanstack/react-query": "^4.0.10",
+    "@types/axios": "^0.14.0",
     "apexcharts": "^3.35.3",
+    "faker": "^6.6.6",
     "framer-motion": "^6.5.1",
+    "migrate-js": "^0.0.8",
+    "miragejs": "^0.1.45",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
+    "react-query": "^4.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/faker": "^6.6.9",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-query": "^1.2.9",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
     "typescript": "4.7.4"
